crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-dataset-multi_embeddings_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
"HTTP error: 400 Bad Request - Execution error: Binder Error: array_cosine_distance: Array arguments must be of the same size"
