crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-dataset-multi_embeddings_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
"HTTP error: 400 Bad Request - Execution error: Binder Error: array_cosine_distance: Array arguments must be of the same size"
