crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-dataset-basic_megascience_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
|               |       ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(_score@2, 3) as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3)), _score@2 as _score]                                                             |
|               |         CooperativeExec                                                                                                                                                                                                             |
|               |           BytesProcessedExec                                                                                                                                                                                                        |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                    |
|               |               DuckDBVectorQueryExec embedded_column=answer_embedding, metric=cosine, dims=64, scan=hnsw, projection=[id, answer, _score]                                                                                            |
|               |                                                                                                                                                                                                                                     |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
